# vs_iqa

./: README.md  pyproject.toml  vs_iqa.py
